# mcp-proxy

./: .gitignore  Cargo.toml  README.md  build.rs  mcp-servers.json  test-input.txt  test-server.rs
.claude/: settings.json  settings.local.json
doc/: claude.md  mcp-proxy-pattern.md
proj/: FIXES  INSTALL  INSTALL.md  ISSUES  PHASES  PROJECT  RAG  RULES  TODO  rulestools.toml
src/: main.rs
src/adapter/: handlers.rs  mod.rs
src/core/: lifecycle.rs  mod.rs  registry.rs
src/gateway/: mod.rs
src/pal/: mod.rs
src/shared/: mod.rs
tests/: echo_downstream.rs
